[metadata]
name = symclosestwannier
author = Rikuto Oiwa
author_email = ro.qp.07@gmail.com
version = attr: symclosestwannier.__version__
url = https://github.com/CMT-MU/SymClosestWannier
description = A Python library for Symmetry-Adapted Closest Wannier (SymCW) Tight-Binding model based on Plane-Wave DFT calculation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dft, wannier function, tight-binding model, symmetry, materials science
license = MIT

[options]
python_requires = >=3.9
install_requires =
    gcoreutils
    multipie
    xmltodict
packages = find:
include_package_data = True

[options.extras_require]
dev =
    sphinx
    sphinx-rtd-theme
    ipython

[options.entry_points]
console_scripts =
    pw2scw = symclosestwannier.pw2scw.pw2scw:cmd
